Overlapping Bugs Resolved to much extent

--- a/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -6,5 +6,5 @@
 }
 
 .mar {
-  margin-bottom: -4px;
+  margin-bottom: -5px;
 }
